gccida/g3/reversed_comparison_code_parts
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code_parts/src/jump.c:1104:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  reversed_comparison_code_parts( rtx_code code, rtx arg0, rtx arg1, rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code_parts/src/jump.c:1104:43: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  reversed_comparison_code_parts( rtx_code code, rtx arg0, rtx arg1, rtx insn) 
                                          ^
                                          enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code_parts/src/jump.c:1110:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code result; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code_parts/src/jump.c:1117:21: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = *( ( _DWORD *)&mode_class_0 + v4); 
                    ^~~~~~~~~~~~
                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code_parts/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code_parts/src/jump.c:1129:24: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
reverse_condition_0( ( rtx_code)v7); 
                       ^~~~~~~~
                       rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code_parts/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code_parts/src/jump.c:1129:33: error: expected ')'
reverse_condition_0( ( rtx_code)v7); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code_parts/src/jump.c:1129:20: note: to match this '('
reverse_condition_0( ( rtx_code)v7); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code_parts/src/jump.c:1130:8: error: use of undeclared identifier 'CSWTCH_103'
return CSWTCH_103[v7]; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code_parts/src/jump.c:1166:10: error: use of undeclared identifier 'CSWTCH_103'
result = CSWTCH_103[v6]; 
         ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reversed_comparison_code_parts/src/obj/jump.o] Error 1
